# type_game

./: CMakeLists.txt  build_win.bat  readme.md
docs/: 第五周作业实现说明.md
typegame/: CMakeLists.txt
typegame/src/app/: main.cpp
typegame/src/app/application/: game_application.cpp  game_application.h
typegame/src/app/factory/: game_factory.cpp  game_factory.h
typegame/src/app/mainwindow/: game_card_widget.cpp  game_card_widget.h  game_select_widget.cpp  game_select_widget.h  game_window.cpp  game_window.h  main_window.cpp  main_window.h
typegame/src/app/resources/: asset_paths.h  typegame_assets.qrc
typegame/src/common/core/: game_event.h  game_event_subject_base.h  game_state.h  game_types.h  igame.h  igame_controller.h  igame_observer.h  iinput_handler.h  letter_entity_base.h
typegame/src/common/factory/: ientity_factory.h
typegame/src/common/pool/: iobject_pool.h  ipoolable.h  object_pool.h
typegame/src/common/service/audio/: async_qt_audio_service.cpp  async_qt_audio_service.h  audio_command.h  audio_service.h  qt_audio_worker.cpp  qt_audio_worker.h
typegame/src/common/service/log/: async_logger.cpp  async_logger.h  ilog_formatter.h  ilogger.h  log_formatter.cpp  log_formatter.h  log_level.h  log_message.h
typegame/src/common/service/telemetry/: async_telemetry_writer.cpp  async_telemetry_writer.h  itelemetry_writer.h  json_formatter.cpp  json_formatter.h  telemetry_message.h
typegame/src/common/view/: sprite_button.cpp  sprite_button.h
typegame/src/common/view/dialog/: two_action_notify_dialog.cpp  two_action_notify_dialog.h
typegame/src/saveapple/controller/: saveapple_controller.cpp  saveapple_controller.h
typegame/src/saveapple/factory/: apple_factory.cpp  apple_factory.h
typegame/src/saveapple/model/: apple_model.cpp  apple_model.h  saveapple_game.cpp  saveapple_game.h  saveapple_model.cpp  saveapple_model.h
typegame/src/saveapple/service/audio/: saveapple_audio_observer.cpp  saveapple_audio_observer.h
typegame/src/saveapple/service/log/: saveapple_logger_observer.cpp  saveapple_logger_observer.h
typegame/src/saveapple/service/telemetry/: saveapple_telemetry_observer.cpp  saveapple_telemetry_observer.h
typegame/src/saveapple/view/: saveapple_pass_dialog.cpp  saveapple_pass_dialog.h  saveapple_settings_dialog.cpp  saveapple_settings_dialog.h  saveapple_view.cpp  saveapple_view.h
